config: add `jvmArgs` to resolve Java module related issue